get filtering on tags working

--- a/config/ceph.yml.example
+++ b/config/ceph.yml.example
@@ -5,5 +5,5 @@ development:
   ssl_verify_peer: false
   bucket: collaborative_gif_cloud_development
   admin_username: admin
-  access_key: IZAJBCXBGW170BVAJ68P
-  secret_key: zXARSZQgxheovKRzAAqFxBi4iPR8J57Sa5yI2rQz
+  access_key: ACCESS_KEY
+  secret_key: SECRET_KEY
